--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 1% 2%;
 }
 
 .logo {
-    margin-left: -6px;
+    margin-left: -0.6%;
     display: inline-flex;
     align-items: center; 
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 25px;
+    column-gap: 2.5%;
 }
 
 .titulo {
@@ -47,7 +47,6 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
 }
 
 nav a {
@@ -63,9 +62,9 @@ nav a:hover {
 
 /* Estilize os projetos */
 .projetos {
-    margin-left: 15px; 
-    margin-right: 15px;
-    margin-bottom: 50px;
+    margin-left: 1.5%; 
+    margin-right: 1.5%;
+    margin-bottom: 5%;
 }
 
 .projeto {
@@ -82,9 +81,9 @@ nav a:hover {
 
 .galeria img {
     border: 1px solid #333;
-    max-width: 600px;
+    max-width: 50%;
     margin-bottom: 10px;
-    margin-left: 10px
+    margin-left: 3%
 }
 
 .anterior, .proximo {
@@ -103,11 +102,11 @@ nav a:hover {
 }
 
 .anterior {
-    left: -24px;
+    left: -0.22%;
 }
 
 .proximo {
-    right: -32px;
+    right: 43.6%;
     border-radius: 3px 0 0 3px;
 }
 
@@ -127,8 +126,8 @@ footer {
     color: #fff;
     text-align: center;
     margin-top: auto;
-    padding-top: 10px;
-    padding-bottom: 15px;
+    padding-top: 1%;
+    padding-bottom: 1.5%;
 }
 
 .link {
