--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,8 @@ nav a:hover {
 .galeria img {
     border: 1px solid #333;
     max-width: 50%;
+    width: auto; /* Garante que a largura se ajuste automaticamente ao tamanho máximo */
+    height: auto; /* Garante que a altura se ajuste proporcionalmente à largura */
     margin-bottom: 10px;
     margin-left: 3%
 }
@@ -102,7 +104,7 @@ nav a:hover {
 }
 
 .anterior {
-    left: -0.22%;
+    left: -0.24%;
 }
 
 .proximo {
