--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,8 @@ nav a:hover {
 .galeria img {
     border: 1px solid #333;
     max-width: 75%;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     margin-bottom: 10px;
     margin-left: 3%
 }
