--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ header {
 .logo {
     margin-left: -0.6%;
     display: inline-flex;
-    align-items: center; 
+    align-items: center;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 2.5%;
 }
@@ -62,7 +62,7 @@ nav a:hover {
 
 /* Estilize os projetos */
 .projetos {
-    margin-left: 1.5%; 
+    margin-left: 1.5%;
     margin-right: 1.5%;
     margin-bottom: 5%;
 }
@@ -81,14 +81,13 @@ nav a:hover {
 
 .galeria img {
     border: 1px solid #333;
-    max-width: 75%;
-    width: 100%;
-    height: 100%;
+    max-width: 900px;
     margin-bottom: 10px;
     margin-left: 3%
 }
 
-.anterior, .proximo {
+.anterior,
+.proximo {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -112,7 +111,8 @@ nav a:hover {
     border-radius: 3px 0 0 3px;
 }
 
-.anterior:hover, .proximo:hover {
+.anterior:hover,
+.proximo:hover {
     background-color: rgba(0, 0, 0, 0.8);
     color: rgba(255, 255, 255, 0.8)
 }
@@ -137,7 +137,7 @@ footer {
     color: #4169E1;
 }
 
-.link:visited{
+.link:visited {
     color: #6A5ACD;
 }
 
