--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ nav a:hover {
 
 .galeria img {
     border: 1px solid #333;
-    max-width: 900px;
+    max-width: 80%;
     margin-bottom: 10px;
     margin-left: 3%
 }
