--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,14 @@ nav a:hover {
     margin-left: 3%
 }
 
+@media only screen and (max-width: 768px) {
+    .galeria img {
+        max-width: 100%;
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
 .anterior,
 .proximo {
     cursor: pointer;
