--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,20 @@ header {
     column-gap: 2.5%;
 }
 
+.imagemLogo {
+    max-width: 15%; 
+    width: 100%; 
+    height: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+    .imagemLogo {
+        max-width: 20%; 
+        width: 100%; 
+        height: 100%;
+    }
+}
+
 .titulo {
     display: block;
     font-size: small;
@@ -62,7 +76,7 @@ nav a:hover {
 
 /* Estilize os projetos */
 .projetos {
-    margin-left: 1.5%;
+    margin-left: 1.2%;
     margin-right: 1.5%;
     margin-bottom: 5%;
 }
@@ -90,7 +104,7 @@ nav a:hover {
     .galeria img {
         max-width: 90%;
         width: 100%;
-        margin-left: 0;
+        margin-left: 4%;
     }
 }
 
@@ -110,19 +124,33 @@ nav a:hover {
     user-select: none;
 }
 
+@media only screen and (max-width: 768px) {
+    .anterior, .proximo {
+        max-width: 75%;
+    }
+}
+
 .anterior {
-    left: -0.42%;
+    left: -1%;
 }
 
 .proximo {
-    right: 18.4%;
+    right: 12.9%;
     border-radius: 3px 0 0 3px;
 }
 
-.anterior:hover,
-.proximo:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-    color: rgba(255, 255, 255, 0.8)
+@media only screen and (max-width: 768px) {
+    .proximo {
+        right: 0.5%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .anterior:hover,
+    .proximo:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+        color: rgba(255, 255, 255, 0.8)
+    }
 }
 
 #informacoes a {
