--- a/styles.css
+++ b/styles.css
@@ -1,135 +1,85 @@
-/* styles.css */
-
-@font-face {
-    font-family: 'matrix';
-    src: url('./matrix.ttf') format('ttf'), /* Formato da fonte WOFF2 */
-         url('./matrix.ttf') format('ttf'); /* Formato da fonte WOFF */
-}
-
 /* Estilos gerais */
 html {
     background: black;
-    width: 100%;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-.animacao-aparecer {
-    opacity: 0; /* Comece com a opacidade a 0 para que o body seja invisível inicialmente */
-    animation: fadeIn 1s ease forwards; /* Defina a animação */
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0; /* No início da animação, o body está invisível */
-    }
-    100% {
-        opacity: 1; /* No final da animação, o body está totalmente visível */
-    }
 }
 
 canvas {
-    position: absolute;
+    width: 100%;
+    height: 100%;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
 }
 
-header {
-    position: absolute;
-    line-height: 10px;
-    top: 0;
-    left: 25%;
-    width: 50%;
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    color: #0F0;
+.header-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70vw;
+    margin-left: auto;
+    margin-right: auto;
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-.texto-animado {
-    opacity: 0; /* Comece com a opacidade a 0 para que o texto seja invisível inicialmente */
-    transform: translateY(-50px); /* Mova o texto para cima para que ele desça depois */
-    animation: slideDown 1.5s ease forwards; /* Defina a animação */
-}
-
-@keyframes slideDown {
-    0% {
-        opacity: 0; /* No início da animação, o texto está invisível */
-        transform: translateY(-50px); /* Mova o texto para cima */
-    }
-    100% {
-        opacity: 1; /* No final da animação, o texto está totalmente visível */
-        transform: translateY(0); /* Traga o texto de volta à sua posição original */
-    }
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-}
-
-img {
-    width: 40%;
-}
-
-section {
-    padding: 50px;
-    width: 50%;
+.header-content h1 {
+    width: calc(100vw / 4); /* Defina a largura do cabeçalho como 100% da largura da tela */
     text-align: center;
-    position: relative;
-    color: white;
-    background-color: rgba(0, 0, 0, 1);
-    border: 2px solid #333; /* Substitua #000 pela cor desejada */
+    padding: calc(1vh * 0.5);
     border-radius: 10px;
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: 10%;
-}
-
-#dourado {
-    color: gold;
-}
-
-#cor-matrix {
-    font-style: oblique;
+    font-size: min(6vw, 50px); /* Tamanho do texto responsivo em relação à largura da tela */
+    font-family: 'Courier New', Courier, monospace;
     color: #0F0;
 }
 
-.caracteristicas {
-    padding-top: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
+section {
+    align-items: center;
+    max-width: min(80vw, 600px);
+    height: auto;
+    text-align: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.8);
+    border: 2px solid #333;
     border-radius: 10px;
-    background-color: rgb(0, 0, 0, 0.8);
-    color: white; 
+    margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    margin-top: -22px;
+    display: flex; /* Alterado para display flex */
+    flex-wrap: wrap; /* Permite que os elementos flexíveis quebrem para a próxima linha quando não couberem mais na largura do contêiner */
+    flex-direction: row;
+    justify-content: center; /* Centraliza os itens horizontalmente */
+    text-align: center;
+    max-width: 90vw;
+    gap: 1vw;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.grid-container > div {
+.grid-container > p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 20%; /* Define que os itens flexíveis ocupem a mesma quantidade de espaço e que possam crescer e encolher (flex-grow: 1, flex-shrink: 1), com uma base de largura de 20% */
     background-color: #111111;
     color: #fff;
-    border: 2px solid #333; /* Substitua #000 pela cor desejada */
+    border: 2px solid #333;
     border-radius: 10px;
-    display: flex; /* Torna o elemento um container flexível */
-    align-items: center; /* Alinha os itens verticalmente no centro */
-    justify-content: center; /* Alinha os itens horizontalmente no centro */
-    text-align: center;
-    margin: 20px;
-    height: 100px;
-    padding: 30px;
-    font-size: 20px;
+    margin: 10px; /* Adiciona margem entre os itens */
+    min-height: 200px;
+    max-height: 25vh;
+    font-size: 1.2rem;
 }
+
+@media (max-width: 700px) {
+    .grid-container > p {
+        width: 30vw;
+        font-size: 1rem;
+    }
+}
+
 
 footer {
     background-color: #333;
@@ -144,40 +94,14 @@ footer {
     background-size: cover;
     background-position: center;
     color: #fff;
+    padding: 100px 0; /* Aumente o preenchimento para melhor legibilidade em dispositivos móveis */
+    font-size: 1.5rem; /* Tamanho de fonte responsivo */
 }
 
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+#dourado {
+    color: gold;
 }
 
-.btn:hover {
-    background-color: #0056b3;
-}
-
-form input, form textarea {
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-form button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-form button:hover {
-    background-color: #0056b3;
+#cor-matrix {
+    color: #0F0
 }
