--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ section {
     font-size: 32px;
     font-family: sans-serif;
     font-weight: bold;
+    text-decoration: none;
 }
 
 @media (max-width: 700px) {
